# Advancedhpc-Project

./: README.md
Images/: Chateau.ppm  Chateau_filtered.ppm
students/: CMakeLists.txt  Exercise1  Exercise2  Exercise3  build.bat  build.sh  makefile
students/src/: main.cu  median.cu  median.h
students/src/exercise1/: Exercise1.cu  Exercise1.h  main.cu
students/src/exercise2/: Exercise2.cu  Exercise2.h  main.cu
students/src/exercise3/: Exercise3.cu  Exercise3.h  main.cu
students/src/utils/: Exercise.h  StudentWork.h  chronoCPU.cpp  chronoCPU.hpp  chronoGPU.cu  chronoGPU.hpp  common.hpp  ppm.cpp  ppm.h  ppm.hpp  utils.cuh
students/student/: Student.1.cu  Student.1.h  Student.2.cu  Student.2.h  Student.3.cu  Student.3.h
students/student/exo1/: student.cu  student.h
students/student/exo2/: student.cu  student.h
students/student/exo3/: student.cu  student.h
